--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,8 +1,5 @@
-  {
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/"
-      }
-    ]
-  }
+{
+  "rewrites": [
+    { "source": "/api/:path*", "destination": "https://greencart-backend-tau-seven.vercel.app/api/:path*" }
+  ]
+}
